correct gap in i can section

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -370,8 +370,8 @@ input:hover {
   width: calc((100% - 100px) / 2);
   display: flex;
   /* flex-direction: row; */
-  gap: 20px;
-  justify-content: space-between;
+  gap: 10px;
+  /* justify-content: space-between; */
   align-items: center;
 }
 .i-can-img {
@@ -385,7 +385,7 @@ input:hover {
   width: 242px;
   box-shadow: 2px 2px 10px 0 rgba(23, 58, 86, 0.15);
   border-radius: 30px;
-  padding: 13px 20px;
+  padding: 13px;
 }
 .i-can-btn {
   display: block;
